--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <br></h3>
     </center>
 
-           <center><a href="file:///C:/Users/MINEDUCYT/Documents/MI%20PAGINA%20HTML/TV1.html">
+           <center><a href="TV1.html">
     <img src="https://buketomnisportpweb.s3.us-east-2.amazonaws.com/products-images/ypaIz3eujFkkSG8QQsoJFLiyEdIi6TSJOFW9muaa.jpeg" width="350" height="350" alt="Smart TV 32A4KV">
 </a>
             <h2>TSmart TV 32A4KV | 32</h2>
