--- a/TV3.html
+++ b/TV3.html
@@ -38,7 +38,7 @@
     </ul>
 </div>
        
-       <CENTER><a href="SMART TV INFINITY.html" style="background-color: #808080; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px;">Inicio</a></CENTER>
+       <CENTER><a href="index.html" style="background-color: #808080; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px;">Inicio</a></CENTER>
         <footer>
     <center><h1 style="background-color:#000000; color:white;">&copy; 2024 Tienda de Televisores Smart TV.</h1></center>
 </footer>
